
=======================================================
            WanT code:  Log of Changes 
=======================================================


Sep 28 2010      bug fixed: non-hermiticity of resulting hamiltonian 
                 on the wannier basis avoided. Verbosity added to all postprocs. 
                 Documentation updated. Test14 added to check embed. 
                 Version updated to 2.4.0-alpha2. (AF)

Jul 07 2010      bug fixed in the definition of eigenchannel orbitals.
                 plot procedure extended to eigenchannels. test11 updated. 
                 At the moment the plotting utility is not working when parallel 
                 kpts are used in transport. 
                 version number changed to 2.4.0-alpha (AF)

Jun 10 2010      bug fix in midpoint.f90: input_from_file called
                 with a wrong interface. Problem reported by Deborah Prezzi. (AF)

May 26 2010      configure flag --enable-etsf-io removed. (AF)

May 11 2010      Error given on reading pseudo when built-in DFT functionals
                 are different changed to a warning. (AF)

May 08 2010      Small inconsistency in the definition of kpt-weights in dos.x
                 fixed. (AF)

May 02 2010      fmt "internal" added to available choices. Postprocs
                 able to start from want files only. (AF)


-------------------------------------------------
Date: 15 Apr 2010    Version: WanT-2.3.0
-------------------------------------------------

Apr 11 2010      WanT manual updated. (AF)

Apr 10 2010      Test suite further cleaned. explicit check on ETSF-IO support 
                 added. Bug fixed in overlaps and projections under the option
                 gamma_only. (AF)

Apr 09 2010      Cleanup of hamiltonian data in trnasport. 
                 test12 updated, including references. 
                 Bug fixed in configure when issued with --with-etsf-io flag. 