@@ -648,7 +648,7 @@ CONTAINS
        CHARACTER(16)      :: subname="windows_read_ext"
        CHARACTER(nstrx)   :: str
        INTEGER            :: lnkpts, ierr, ik
-       REAL(dbl)          :: lefermi
+       REAL(dbl)          :: lefermi(2)
        REAL(dbl), ALLOCATABLE :: leig(:,:,:)
        !
 #ifdef __ETSF_IO
@@ -682,8 +682,11 @@ CONTAINS
        CASE ( 'pw_export' )
             !
             CALL qexpt_read_bands( NBND=nbnd, NUM_K_POINTS=lnkpts, &
-                                   NSPIN=nspin, EF=lefermi, &
+                                   NSPIN=nspin, EF=lefermi(1), &
                                    NELEC=nelec, IERR=ierr )
+            !
+            ! 2 fermi energies not allowed
+            lefermi(2) = lefermi(1)
             !
             CALL mp_bcast( nbnd,    ionode_id )
             CALL mp_bcast( lnkpts,  ionode_id )
@@ -815,7 +818,9 @@ CONTAINS
             str = "Hartree"
             !
             leig( 1:nbnd, 1:nkpts_g, 1:nspin) = eigenvalues(:,:,:)
-            lefermi = fermi_energy
+            !
+            ! two-fermi-energies not allowed
+            lefermi(1:2) = fermi_energy
             !
             DEALLOCATE( eigenvalues )
             !
@@ -854,7 +859,14 @@ CONTAINS
        !
        ! check whether fermi energy is read from dftdata_file
        !
-       IF ( read_efermi ) efermi = lefermi
+       IF ( read_efermi ) efermi = lefermi(ispin)
+
+       IF ( ABS(efermi) > 10000.0 ) THEN
+           !
+           efermi = 0.0_dbl
+           CALL warning( subname, 'Unphysical efermi; reset to zero')
+           !
+       ENDIF
 
        !
        ! define EIG, which contains only the kpts related to the current pool
